[project]
name = "human-tar"
version = "2.0.0"
description = "A human-readable tar format for text files, based on grep . -r output"
readme = "README.md"
requires-python = ">=3.6"
keywords = [ "grep", "tar", "file-unpacking", "ai-tools",]
[[project.authors]]
name = "@readwithai"
email = "talwrii@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/talwrii/human-tar"
Repository = "https://github.com/talwrii/human-tar"
Issues = "https://github.com/talwrii/human-tar/issues"

[project.scripts]
human-tar = "human_tar.tar:main"
human-untar = "human_tar.main:main"
